--- a/projects/lib/package.json
+++ b/projects/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angularx-social-login",
-  "version": "4.0.1",
+  "version": "5.0.0",
   "description": "Social login and authentication module for Angular 12. Supports authentication with Google, Facebook, Amazon, and VK. Can be extended to other providers also.",
   "repository": {
     "type": "git",
@@ -30,10 +30,10 @@
     "url": "https://github.com/abacritt/angularx-social-login/issues"
   },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/common": "^12.0.0",
-    "@angular/core": "^12.0.0"
+    "@angular/common": "~13.0.0",
+    "@angular/core": "~13.0.0"
   }
 }
